client/src/app/family/family-card.component.scss
// This sets the font size to be the same for both the Angular Material
// list item title and list item line.
.mat-mdc-list-item {
  &-title,
  &-line {
    font-size: 1rem;
  }
}

// Capitalize the family role when displaying it in the family card.
.family-card-role {
  text-transform: capitalize;
}

.family-card-email {
  display: block; /* Make it a block-level element */
  color: inherit; /* Inherit the text color from the parent element */
  text-decoration: none; /* Remove default underline */
  padding: 0; /* Reset padding */
  margin: 0; /* Reset margin */
  cursor: pointer; /* Change cursor to pointer on hover */
}

// Rules for how the cards should be displayed and the space in-between
.student-card-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 12px;
}

.student-cards {
  display: flex;
  padding: 10px;
}

.edit-family-fab {
  position: absolute;
  top: 10px;
  right: 10px;
}

